--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,8 +8,8 @@ name: Docker
 on:
   push:
     branches: [ master ]
-    # Publish semver tags as releases.
-    tags: [ 'v*.*.*' ]
+    # Publish tags as releases.
+    tags: [ '*' ]
   pull_request:
     branches: [ master ]
 
