--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,7 +8,7 @@ name: Docker
 on:
   workflow_dispatch:
   schedule:
-    - cron: 0 10 * * *
+    - cron: 0 10 * * 1
   push:
     branches: [ master ]
     # Publish tags as releases.
